0.11.0/html/_sources/for_developers.rst.txt
**************
For Developers
**************

**pwv_kpno** is open source software released under the GNU `General Public
License <https://www.gnu.org/licenses/gpl-3.0.en.html>`_. The following is
provided as reference for future development.

Extra Dependencies
==================

Documentation for **pwv_kpno** is generated using sphinx with the "Read The
Docs" theme. Source code for the documentation can be found in the *gh-pages*
branch of the project repository
`here <https://github.com/mwvgroup/pwv_kpno/tree/gh-pages>`_. To update or
modify package documentation, you will need to install the following

.. code-block:: bash

    pip install sphinx
    pip install sphinx_rtd_theme

In order to automatically generate a new version of the documentation, from the
`rst_source` directory use the command

.. code-block:: bash

    make gh-pages

Note that the usage examples in the documentation are hard coded. This means
the make file will not update the demonstrated code outputs to reflect any new
code changes. Also, the sphinx configuration file `rst_source/conf.py` is not
explicitly setup for any outputs supported by sphinx other than html (such as
Texinfo, LaTeX, or HTMLHelp).

Future Features
===============

* Include an option or function to return the atmospheric transmission
  binned at different wavelengths.
* Add the ability to create new atmospheric models for an arbitrary SuomiNet
  location.
* Implement functions to export / import custom made models and affiliated data
  so that resources can be shared between collaborators or made public.
* Extend the atmospheric models to include a wider wavelength range.
* Write a function to automatically download / delete new package data as
  necessary when preparing to push a new package version.

**Note:** The **pwv_kpno** package depends on atmospheric models parsed by
`create_atm_model.py`. These models only consider the effects of precipitable
water vapor, but can be modified to include the effects of o\ :sub:`2`\  and
o\ :sub:`3`\. The necessary code for this is commented out within the file.

Releasing a New Version
=======================

New package versions should be released at least every year, and should include
all relevant SuomiNet data from 2010 through the previous year. No SuomiNet
data should be included for the year that the new version is released. To
release a new version, follow the following steps:

1. Make sure that the build passes on `travis-ci.org <travis-ci.org>`_.
2. Update the meta data in `__init__.py` and the badges in `README.md` to reflect
   the new version number and any newly supported Python versions.
3. Proofread package docstring for both spelling and accuracy.
4. Generate new documentation using sphinx.
5. Submit a pull request to merge the new source code into ``master``.
6. Submit a second pull requests to merge the new documentation into
   ``gh-pages``.
7. Run the `push_pypi` bash file from the root directory to automatically
   upload the new version to the python package index (you will need the
   appropriate login information for this step).

